# KM2IxD

Les1/Voorbeeld-HalfMirror/: CMakeLists.txt
Les1/Voorbeeld-HalfMirror/src/: ofApp.cpp  ofApp.h
Les1/Voorbeeld-VideoGrabber/: CMakeLists.txt
Les1/Voorbeeld-VideoGrabber/src/: ofApp.cpp  ofApp.h
Les2/Voorbeeld-FeatureFinder/: CMakeLists.txt  Makefile  config.make
Les2/Voorbeeld-FeatureFinder/src/: ofApp.cpp  ofApp.h
Les3/ColourTracker/: CMakeLists.txt
Les3/ColourTracker/src/: ofApp.cpp  ofApp.h
Les3/Voorbeeld-ColourTracker/: CMakeLists.txt
Les3/Voorbeeld-ColourTracker/src/: ofApp.cpp  ofApp.h
Les3/Voorbeeld-ColourTrackerSimple/: CMakeLists.txt  Makefile  config.make
Les3/Voorbeeld-ColourTrackerSimple/src/: BlobTracker.cpp  BlobTracker.h  ofApp.cpp  ofApp.h
